--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 						<section>
 							<div class="content">
 								<header>
-									<a href="#" class="icon fa-floppy-o"><span class="label">Icon</span></a>
+									<a href="#" class="icon fa-flag-o"><span class="label">Icon</span></a>
 									<h3>Discover the Solution</h3>
 								</header>
 								<p>There is also a way to solve all of the issues. By making the right choices you will be able to find the best way for college esports to continue.</p>
@@ -127,7 +127,7 @@
 				<div class="inner">
 					<h2>So What're You Waiting For?</h2>
 					<p>Start Your Journey Now</p>
-					<a href="https://chua19.github.io/English-Project/start.html" class="button primary fit">Begin</a>
+					<a href="https://chua19.github.io/English-Project/start.html" class="button">Begin</a>
 				</div>
 			</section>
 		
