Update and rename generic.html to start.html

--- a/start.html
+++ b/start.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Generic Page - Industrious by TEMPLATED</title>
+		<title>English Project</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<meta name="description" content="" />
@@ -15,15 +15,15 @@
 	</head>
 	<body class="is-preload">
 
-		<!-- Header -->
+		<!-- Header
 			<header id="header">
 				<a class="logo" href="index.html">Industrious</a>
 				<nav>
 					<a href="#menu">Menu</a>
 				</nav>
 			</header>
-
-		<!-- Nav -->
+		-->
+		<!-- Nav
 			<nav id="menu">
 				<ul class="links">
 					<li><a href="index.html">Home</a></li>
@@ -31,7 +31,7 @@
 					<li><a href="generic.html">Generic</a></li>
 				</ul>
 			</nav>
-
+		-->
 		<!-- Heading -->
 			<div id="heading" >
 				<h1>Generic Page</h1>
@@ -54,7 +54,7 @@
 				</div>
 			</section>
 
-		<!-- Footer -->
+		<!-- Footer
 			<footer id="footer">
 				<div class="inner">
 					<div class="content">
@@ -86,7 +86,7 @@
 					</div>
 				</div>
 			</footer>
-
+		-->
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
 			<script src="assets/js/browser.min.js"></script>
