--- a/start.html
+++ b/start.html
@@ -42,45 +42,27 @@
 				<div class="inner">
 					<div class="content">
 						<p>You're an 18 year old that just graduated high school. You've been playing video games for a couple of years now, and have become pretty good. You're one of the top 300 players in the world, and you've slowly been climbing the leaderboards.</p>
+						<p>You have a choice to make though. You've got offers from multiple colleges to come and compete for their team. You've also got a few offers from professional teams. Most colleges that accepted you have offered you full scholarships to their school while the teams that you've talked to are willing to give you contracts that last a year and pay about the same amount as the scholarships.</p>
 						<hr />
-						<p>You have a choice to make though. You've got offers from multiple colleges to come and compete for their team. You've also got a few offers from professional teams.</p>
+						<a href="https://chua19.github.io/English-Project/choice1.html" class="button primary fit">Go to a College Team</a>
+						<a href="#" class="button primary fit">Go to a Professional Team</a>
 					</div>
 				</div>
 			</section>
 
-		<!-- Footer
+		<!-- Footer -->
 			<footer id="footer">
 				<div class="inner">
 					<div class="content">
 						<section>
-							<h3>Accumsan montes viverra</h3>
-							<p>Nunc lacinia ante nunc ac lobortis. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus ornare mi ut ante amet placerat aliquet. Volutpat eu sed ante lacinia sapien lorem accumsan varius montes viverra nibh in adipiscing. Lorem ipsum dolor vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing sed feugiat eu faucibus. Integer ac sed amet praesent. Nunc lacinia ante nunc ac gravida.</p>
+							<a href="https://chua19.github.io/English-Project/index.html" class="button primary icon fa-mail-reply">Previous Choice</a>
 						</section>
 						<section>
-							<h4>Sem turpis amet semper</h4>
-							<ul class="alt">
-								<li><a href="#">Dolor pulvinar sed etiam.</a></li>
-								<li><a href="#">Etiam vel lorem sed amet.</a></li>
-								<li><a href="#">Felis enim feugiat viverra.</a></li>
-								<li><a href="#">Dolor pulvinar magna etiam.</a></li>
-							</ul>
+							<a href="https://chua19.github.io/English-Project/index.html" class="button primary icon fa-refresh">Back to the Beginning</a>
 						</section>
-						<section>
-							<h4>Magna sed ipsum</h4>
-							<ul class="plain">
-								<li><a href="#"><i class="icon fa-twitter">&nbsp;</i>Twitter</a></li>
-								<li><a href="#"><i class="icon fa-facebook">&nbsp;</i>Facebook</a></li>
-								<li><a href="#"><i class="icon fa-instagram">&nbsp;</i>Instagram</a></li>
-								<li><a href="#"><i class="icon fa-github">&nbsp;</i>Github</a></li>
-							</ul>
-						</section>
-					</div>
-					<div class="copyright">
-						&copy; Untitled. Photos <a href="https://unsplash.co">Unsplash</a>, Video <a href="https://coverr.co">Coverr</a>.
 					</div>
 				</div>
 			</footer>
-		-->
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
 			<script src="assets/js/browser.min.js"></script>
