--- a/start.html
+++ b/start.html
@@ -44,8 +44,10 @@
 						<p>You're an 18 year old that just graduated high school. You've been playing video games for a couple of years now, and have become pretty good. You're one of the top 300 players in the world, and you've slowly been climbing the leaderboards.</p>
 						<p>You have a choice to make though. You've got offers from multiple colleges to come and compete for their team. You've also got a few offers from professional teams. Most colleges that accepted you have offered you full scholarships to their school while the teams that you've talked to are willing to give you contracts that last a year and pay about the same amount as the scholarships.</p>
 						<hr />
-						<a href="https://chua19.github.io/English-Project/choice1.html" class="button primary fit">Go to a College Team</a>
-						<a href="#" class="button primary fit">Go to a Professional Team</a>
+						<ul class="actions fit">
+							<li><a href="https://chua19.github.io/English-Project/choice1.html" class="button primary fit">Go to a College Team</a></li>
+							<li><a href="#" class="button primary fit">Go to a Professional Team</a></li>
+						</ul>
 					</div>
 				</div>
 			</section>
@@ -56,6 +58,8 @@
 					<div class="content">
 						<section>
 							<a href="https://chua19.github.io/English-Project/index.html" class="button primary icon fa-mail-reply">Previous Choice</a>
+						</section>
+						<section>
 						</section>
 						<section>
 							<a href="https://chua19.github.io/English-Project/index.html" class="button primary icon fa-refresh">Back to the Beginning</a>
