--- a/start.html
+++ b/start.html
@@ -46,8 +46,8 @@
 						<hr />
 						<ul class="actions fit">
 							<li><a href="https://chua19.github.io/English-Project/choice1.html" class="button primary fit">Go to a College Team</a></li>
-							<li><a href="#" class="button primary fit" id ="myBtn">Go to a Professional Team</a></li>
-							<li><button id="myBtn" class="button primary fit">Go to a Professional Team</button></li>
+							<li><a href="" class="button primary fit" id ="myBtn">Go to a Professional Team</a></li>
+							<!-- <li><button id="myBtn" class="button primary fit">Go to a Professional Team</button></li> -->
 						</ul>
 					</div>
 				</div>
