--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 				<div class="inner">
 					<header class="special">
 						<h2>Purpose of Website</h2>
-						<p>There is no doubt that esports has a bright and long future ahead of it. However, there are parts of the esports industry that aren't well known, like college esports. This website will allow you to do the following things:</p>
+						<p>There is no doubt that esports has a bright and long future ahead of it. However, there are parts of the esports industry that aren't well known, like college esports. It’s important to note the difference between esports programs and esports teams. Many colleges have the latter, and the main difference between the two is that esports programs are “endorsed by the athletic department at their institution as an official varsity sport” <a href="https://www.tandfonline.com/doi/abs/10.1080/19357397.2017.1316001">(Keiper, 2)</a>. They usually contain personnel paid for by the university, like coaches and mentors. These programs are meant as a pipeline that sends athletes directly to the professional scene. This website will allow you to do the following things:</p>
 					</header>
 					<div class="highlights">
 						<section>
