--- a/start.html
+++ b/start.html
@@ -97,7 +97,7 @@
   <!-- Modal content -->
   <div class="modal-content">
     <span class="close">&times;</span>
-    <p>Some text in the Modal..</p>
+    <p>You play with the team for a couple of months, but then you get dropped from the team. What happened? Because you decided to skip college esports altogether, you lost some valuable skills. In a study conducted by Claire Schaeperkoetter from the University of Kansas, all 33 college esports athletes that were interviewed stated that they had formed a strong bond with their teammates <a href="https://www.researchgate.net/publication/318383819_The_New_Student-Athlete_An_Exploratory_Examination_of_Scholarship_eSports_Players">(15)</a>. This level of communication and teamwork is extremely important when competing, as there are many team videogames that require all team members to be in sync. The college esports programs give players the experience that cannot be replicated anywhere else, which extremely important for players looking to go professional.</p>
   </div>
 
 </div>
