--- a/choice1.html
+++ b/choice1.html
@@ -74,14 +74,14 @@
 		-->
 		<!-- Heading -->
 			<div id="heading" >
-				<h1>Background</h1>
+				<h1>Practice Time</h1>
 			</div>
 
 		<!-- Main -->
 			<section id="main" class="wrapper">
 				<div class="inner">
 					<div class="content">
-						<p>You're an 18 year old that just graduated high school. You've been playing video games for a couple of years now, and have become pretty good. You're one of the top 300 players in the world, and you've slowly been climbing the leaderboards.</p>
+						<p>Once you arrive at college, you're immediately placed into a rigorous practice schedule. </p>
 						<p>You have a choice to make though. You've got offers from multiple colleges to come and compete for their team. You've also got a few offers from professional teams. Most colleges that accepted you have offered you full scholarships to their school while the teams that you've talked to are willing to give you contracts that last a year and pay about the same amount as the scholarships.</p>
 						<hr />
 						<ul class="actions fit">
