--- a/choice1.html
+++ b/choice1.html
@@ -81,13 +81,13 @@
 			<section id="main" class="wrapper">
 				<div class="inner">
 					<div class="content">
-						<p>Once you arrive at college, you're immediately placed into a rigorous practice schedule. </p>
-						<p>You have a choice to make though. You've got offers from multiple colleges to come and compete for their team. You've also got a few offers from professional teams. Most colleges that accepted you have offered you full scholarships to their school while the teams that you've talked to are willing to give you contracts that last a year and pay about the same amount as the scholarships.</p>
+						<p>Once you arrive at college, you're immediately placed into a practice schedule. You realize that this schedule is extremely compact, with practice almost every day. You're practicing so much that you rarely have time to do anything else.</p>
+						<p>You must decide between two choices: either continue to rigorously practice with the team or take a break every so often but lose valuable time.</p>
 						<hr />
 						<ul class="actions fit">
-							<li><a href="https://chua19.github.io/English-Project/choice1.html" class="button primary fit">Go to a College Team</a></li>
-							<li><a href="#" class="button primary fit" id ="myBtn" onclick="return false;">Go to a Professional Team</a></li>
-							<!-- <li><button id="myBtn" class="button primary fit">Go to a Professional Team</button></li> -->
+							<li><a href="https://chua19.github.io/English-Project/choice2.html" class="button primary fit">Continue to Practice</a></li>
+							<li><a href="https://chua19.github.io/English-Project/choice3.html" class="button primary fit">Take a Break</a></li>
+							<!-- <li><a href="#!" class="button primary fit" id ="myBtn" onclick="return false;">Take a Break</a></li> -->
 						</ul>
 					</div>
 				</div>
