--- a/choice2.html
+++ b/choice2.html
@@ -74,19 +74,19 @@
 		-->
 		<!-- Heading -->
 			<div id="heading" >
-				<h1>Practice Time</h1>
+				<h1>Injuries</h1>
 			</div>
 
 		<!-- Main -->
 			<section id="main" class="wrapper">
 				<div class="inner">
 					<div class="content">
-						<p>Once you arrive at college, you're immediately placed into a practice schedule. You realize that this schedule is extremely compact, with practice almost every day. You're practicing so much that you rarely have time to do anything else.</p>
-						<p>You must decide between two choices: either continue to rigorously practice with the team or take a break every so often but lose valuable time.</p>
+						<p>Because you practice for hours on end, you stay competitive with your peers. However, you begin to feel sore after practicing, and you start having some eye fatigue. You're pretty sure it's nothing, and don't have it checked by a professional. There is also a competition that is coming up that you really want to prepare for.</p>
+						<p>You can either: choose to continue to practice and put more strain on your body or stop to recover but lose a lot of practice time for the event.</p>
 						<hr />
 						<ul class="actions fit">
-							<li><a href="https://chua19.github.io/English-Project/choice2.html" class="button primary fit">Continue to Practice</a></li>
-							<li><a href="https://chua19.github.io/English-Project/choice3.html" class="button primary fit">Take a Break</a></li>
+							<li><a href="https://chua19.github.io/English-Project/choice4.html" class="button primary fit">Stop and Rest</a></li>
+							<li><a href="#!" class="button primary fit" id ="myBtn" onclick="return false;">Train for Competition</a></li>
 							<!-- <li><a href="#!" class="button primary fit" id ="myBtn" onclick="return false;">Take a Break</a></li> -->
 						</ul>
 					</div>
@@ -97,7 +97,7 @@
   <!-- Modal content -->
   <div class="modal-content">
     <span class="close">&times;</span>
-    <p>Some text in the Modal..</p>
+    <p>Because you decided to continue practicing, you develop injuries, which is fairly common for college esports athletes. After interviewing 65 college esports athletes, the most reported complaint given was eye fatigue, followed by neck and back pain, wrist pain, and hand pain <a href="https://bmjopensem.bmj.com/content/5/1/e000467">(DiFrancisco-Donoghue, 3)</a>. Because of these injuries you are unable to continue playing.</p>
   </div>
 
 </div>
