--- a/choice3.html
+++ b/choice3.html
@@ -74,19 +74,19 @@
 		-->
 		<!-- Heading -->
 			<div id="heading" >
-				<h1>Practice Time</h1>
+				<h1>Academic Standards</h1>
 			</div>
 
 		<!-- Main -->
 			<section id="main" class="wrapper">
 				<div class="inner">
 					<div class="content">
-						<p>Once you arrive at college, you're immediately placed into a practice schedule. You realize that this schedule is extremely compact, with practice almost every day. You're practicing so much that you rarely have time to do anything else.</p>
-						<p>You must decide between two choices: either continue to rigorously practice with the team or take a break every so often but lose valuable time.</p>
+						<p>Because you chose to take a break you gave yourself some free time to do other things like extracurricular activities and different sports. However, a competition is quickly approaching and you want to increase your practice time briefly to ensure you are prepared. You also happen to have an exam the same week, and you are unsure of what to invest your time into.</p>
+						<p>You must decide to either practice for your competition or study for your exam.</p>
 						<hr />
 						<ul class="actions fit">
-							<li><a href="https://chua19.github.io/English-Project/choice2.html" class="button primary fit">Continue to Practice</a></li>
-							<li><a href="https://chua19.github.io/English-Project/choice3.html" class="button primary fit">Take a Break</a></li>
+							<li><a href="#!" class="button primary fit" id ="myBtn" onclick="return false;">Exam</a></li>
+							<li><a href="https://chua19.github.io/English-Project/choice5.html" class="button primary fit">Competition</a></li>
 							<!-- <li><a href="#!" class="button primary fit" id ="myBtn" onclick="return false;">Take a Break</a></li> -->
 						</ul>
 					</div>
@@ -97,7 +97,7 @@
   <!-- Modal content -->
   <div class="modal-content">
     <span class="close">&times;</span>
-    <p>Some text in the Modal..</p>
+    <p>Because you haven't invested as much time into the esports program as you should've you lose your spot to someone else. Try again!</p>
   </div>
 
 </div>
@@ -106,7 +106,7 @@
 				<div class="inner">
 					<div class="content">
 						<section>
-							<a href="https://chua19.github.io/English-Project/start.html" class="button primary icon fa-mail-reply">Previous Choice</a>
+							<a href="https://chua19.github.io/English-Project/choice1.html" class="button primary icon fa-mail-reply">Previous Choice</a>
 						</section>
 						<section>
 						</section>
