--- a/choice5.html
+++ b/choice5.html
@@ -74,19 +74,19 @@
 		-->
 		<!-- Heading -->
 			<div id="heading" >
-				<h1>Injuries</h1>
+				<h1>Incoming Contracts</h1>
 			</div>
 
 		<!-- Main -->
 			<section id="main" class="wrapper">
 				<div class="inner">
 					<div class="content">
-						<p>Because you practice for hours on end, you stay competitive with your peers. However, you begin to feel sore after practicing, and you start having some eye fatigue. You're pretty sure it's nothing, and don't have it checked by a professional. There is also a competition that is coming up that you really want to prepare for.</p>
-						<p>You can either: choose to continue to practice and put more strain on your body or stop to recover but lose a lot of practice time for the event.</p>
+						<p>You continue to put all your time into esports, and even win some competitions. You get an offer from a professional team, and they want you to join immediately. You're already doing poorly on your exams anyways, but leaving college now means you won't get the skills necessary to get a job outside of esports.</p>
+						<p>You can either: join a professional team and ditch college or decline the offer and continue with your education.</p>
 						<hr />
 						<ul class="actions fit">
-							<li><a href="https://chua19.github.io/English-Project/choice4.html" class="button primary fit">Stop and Rest</a></li>
-							<li><a href="#!" class="button primary fit" id ="myBtn" onclick="return false;">Train for Competition</a></li>
+							<li><a href="https://chua19.github.io/English-Project/solution1.html" class="button primary fit">College</a></li>
+							<li><a href="#!" class="button primary fit" id ="myBtn" onclick="return false;">Professional Team</a></li>
 							<!-- <li><a href="#!" class="button primary fit" id ="myBtn" onclick="return false;">Take a Break</a></li> -->
 						</ul>
 					</div>
@@ -97,8 +97,8 @@
   <!-- Modal content -->
   <div class="modal-content">
     <span class="close">&times;</span>
-    <p>Because you decided to continue practicing, you develop injuries, which is fairly common for college esports athletes. After interviewing 65 college esports athletes, the most reported complaint given was eye fatigue, followed by neck and back pain, wrist pain, and hand pain <a href="https://bmjopensem.bmj.com/content/5/1/e000467">(DiFrancisco-Donoghue, 3)</a>. Because of these injuries you are unable to continue playing.</p>
-  </div>
+	  <p>You joined the team, and you're doing well. It seems like a good fit for you. There's just one problem: you barely get any money. According to the Dot Esports, after looking at the top 500 players of Dota 2, a popular videogame, only 114 earn above $11,500, the poverty level in 2013 for the United States (Mitchell, 2014). You barely earn enough money to scrape a meal together, and because you ditched college, it is extremely hard to find another job.</p>
+	</div>
 
 </div>
 		<!-- Footer -->
@@ -106,7 +106,7 @@
 				<div class="inner">
 					<div class="content">
 						<section>
-							<a href="https://chua19.github.io/English-Project/choice1.html" class="button primary icon fa-mail-reply">Previous Choice</a>
+							<a href="https://chua19.github.io/English-Project/choice3.html" class="button primary icon fa-mail-reply">Previous Choice</a>
 						</section>
 						<section>
 						</section>
